fixed navbar alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,3 +3,7 @@
     width: auto;
     height: auto;
 }
+
+.navbar-right {
+	float: right;
+}
